--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "jest": {
     "preset": "jest-puppeteer",
     "verbose": true
+  },
+  "dependencies": {
+    "@types/jest": "^29.2.3"
   }
 }
